// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImagen Debe de mostrar el componente con la  imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product "
    className="productImg undefined"
    src="./Coffee-mug.png"
  />
</div>
`;

exports[`ProductImagen debe de moctrar el componente correctamente con el imagen personalizado 1`] = `
<img
  alt="Product "
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
